# StockSage-AI

./: .gitignore  API_SPECIFICATION.md  AUTH_README.md  README.md  package-lock.json
backend/: .env.example  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml  requirements.txt
backend/Tests/: test_auth.py  test_education.py  test_stocks.py
backend/scripts/: check_firebase_setup.py
backend/stocksage_api/: main.py
backend/stocksage_api/config/: firebase_config.py
backend/stocksage_api/routes/: auth.py  education.py  firebase_test.py  portfolio.py  public_stocks.py
backend/stocksage_api/routes/portfolios/: __init__.py  performance_routes.py  portfolio_routes.py  simulation_routes.py  trade_routes.py
backend/stocksage_api/services/: background_tasks.py  firebase_service.py
backend/stocksage_api/services/portfolios/: README.md  __init__.py  portfolio_service.py
docs/sprint0/: PB.md  competition.md  done.md  process.md  summary.md  team.md
docs/sprint1/: RPM.md  system_design.md
docs/sprint2/: RPM.md  sprint2.md
frontend/: IMPLEMENTATION_PLAN.md  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/api/: index.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CompanyInfoCard.tsx  Header.tsx  StockChart.tsx  StockDetailDashboard.tsx  StockMetricsCard.tsx  ThemeProvider.tsx  condtionalRender.tsx  education-page.tsx  header.tsx  login-form.tsx  main-dashboard-layout.tsx  main-dashboard.tsx  password-reset-form.tsx  profile-dropdown.tsx  sidabar.tsx  sidebar.tsx  signIn-form.tsx  signup-form.tsx  (+2 more)
(+33 files in other folders)
